# chess-skrolli-problem

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: docker.yml
src/: lib.rs  main.rs
www/: app.js  index.html
