[package]
name = "chess-skrolli-problem"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = "0.10.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
getrandom = { version = "0.4", features = ["wasm_js"] }
